fix: missing module in Dockerfile, minor improvements